--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -3,7 +3,7 @@ container_commands:
     command: "django-admin.py migrate"
     leader_only: true
   02_createsuperuser:
-    command: "echo \"from accounts.models import Account; Account.objects.create_superuser('Franco', 'Loto', 'franco.loto1995@gmail.com', 'francoloto', '1234hola')\" | python manage.py shell"
+    command: "echo \"from accounts.models import Account; Account.objects.create_superuser('Franco', 'Loto', 'franco.loto1995@gmail.com', 'francoloto', '1234Hola')\" | python manage.py shell"
     leader_only: true
 option_settings:
   aws:elasticbeanstalk:application:environment:
